--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title> A Favorite Recipe </title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <h1> My Wife's ChocOat Chip Cookies </h1>
+    <p> I love making cookies with Emily! </p>
+
+    <h2> Ingredients </h2>
+    <ul>
+      <li> chocolate chips </li>
+      <li> oats </li>
+      <li> sugar </li>
+      <li> salt </li>
+      <li> vanilla </li>
+      <li> flour </li>
+      <li> probably other things I'm forgetting </li>
+      <li> my daughter just reminded me of the baking soda </li>
+    </ul>
+
+    <h2> Instructions </h2>
+    <ol>
+      <li> gather all ingredient into one place </li>
+      <li> ask Emily what to do next </li>
+      <li> after mixing, eat spoonfuls of delicious dough </li>
+      <li> form remaining dough into balls for baking </li>
+      <li> bake as long as Emily says at the heat Emily says </li>
+      <li> eat cookies with a glass of milk </li>
+      <li> maybe share a few </li>
+    </ol>
+
+  </body>
+
+</html>
