added cookie img, src, & alt

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +7,8 @@
   <body>
     <h1> My Wife's ChocOat Chip Cookies </h1>
     <p> I love making cookies with Emily! </p>
+
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx1hk5161Sxq-zScnQehC9hL4AuFF3Ge3WkQ&s" alt="plate of chewy, delicious cookies">
 
     <h2> Ingredients </h2>
     <ul>
